@@ -11,7 +11,7 @@ bumby, kalyway, Krazubu, Eddie11c, JaS, fassl, XyZ, SMF, flama, Galaxy, sckevyn,
 
 Package:
 --------- 
-kalyway, AzimutZ, blackosx, ErmaC, scrax, JrCs
+kalyway, AzimutZ, blackosx, ErmaC, Micky1979, scrax, JrCs
 
 Copyright:
 ---------
